--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -30,8 +30,6 @@ section {
 }
 
 .pizzas {
-    padding: 0 2em;
-    background-color: rgb(19, 24, 27);
     margin: 3em;
     width: 700px;
     border-radius: 10px;
@@ -39,8 +37,12 @@ section {
 
 .pizza {
     display: flex;
-    border-bottom: 2px solid rgba(255, 255, 255,0.2);
-    padding: 1em;
+    background-color: rgb(19, 24, 27);
+    width: 700px;
+    padding: 1em 3em;
+    border-radius: 10px;
+    margin-bottom: 0.5em;
+
 }
 
 .pizzas div:last-child {
@@ -61,7 +63,7 @@ section {
     justify-content: center;
     padding: 0 0 0 1em;
     border-radius: 5px;
-    border-left: 2px solid rgba(255, 255, 255,0.2)
+    border-left: 4px solid rgba(255, 255, 255,0.2)
 }
 
 .add-and-remove-btn img {
@@ -140,7 +142,6 @@ section {
 
 form {
     color: white;
-    /* display: flex; */
     display: none;
     flex-direction: column;
     align-items: center;
@@ -175,8 +176,28 @@ form input {
 }
 
 .quantity:hover, #checkout:hover, #submit:hover, .list-item:hover {
-    /* background-color: rgb(170, 47, 16); */
     background-color: rgb(204, 107, 77);
     background-color: rgb(39, 81, 92);
-    /* color: black; */
+}
+
+#filtered-list {
+    position: absolute;
+    top: 47px;
+    right: 90px;
+}
+
+#filtered-list li {
+    font-size: 16px;
+    padding: 0.2em;
+    border-radius: 4px;
+    background-color: rgb(134, 29, 25);
+    width: 205px;
+    text-align: center;
+    margin-top: 2px;
+}
+
+#filtered-list button {
+    background-color: rgb(19, 24, 27);
+    padding: 0.5em;
+    border-radius: 5px;
 }
